first version of homepage

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
+    <img class="bg-img" src="../assets/indexbg.jpg" alt="background-image">
     <div class="account-links">
-        <a href="html/signup.html">SIGN UP</a>
-        <a href="html/signin.html">SIGN IN</a>
+        <a class="login-link" href="html/signup.html">SIGN UP</a>
+        <a class="login-link" href="html/signin.html">SIGN IN</a>
     </div>
     <div class="main-content">
         <h1 id="header">Charity in Style</h1>
