--- a/src/html/signup.html
+++ b/src/html/signup.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/signup.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="signup">
+        <p>Sign-Up</p>
+    </div>
+    <div class="form">
+        <input type="text" id="username" name="username" placeholder="Username">
+        <input type="email" id="email" name="email" placeholder="Email">
+        <input type="password" id="password" name="password" placeholder="Password">
+        <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm Password">
+        <button type="submit" id="submit"> Log In </button>
+    </div>
 </body>
+
 </html>
