--- a/src/html/signup.html
+++ b/src/html/signup.html
@@ -18,8 +18,11 @@
         <input type="email" id="email" name="email" placeholder="Email">
         <input type="password" id="password" name="password" placeholder="Password">
         <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm Password">
-        <button type="submit" id="submit"> Log In </button>
+        <button type="submit" id="submit"> Sign Up </button>
     </div>
+
+    <!-- Handle Submits/Firebase Authentication-->
+    <script type="module" src="../scripts/signup.js"></script>
 </body>
 
 </html>
