--- a/src/html/signin.html
+++ b/src/html/signin.html
@@ -18,6 +18,9 @@
         <input type="password" id="password" name="password" placeholder="Password">
         <button type="submit" id="submit"> Sign Up </button>
     </div>
+
+    <!--Sign In Authentication/Firebase-->
+    <script type="module" src="../scripts/signin.js"></script>
 </body>
 
 </html>
