--- a/src/html/donatepage.html
+++ b/src/html/donatepage.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <img src="../assets/menu.svg" alt="backbutton" class="backbutton">
     <h1>Donate your clothes for a good cause</h1>
     <div class="main-content">
         <form id="signup-form">
@@ -30,7 +31,7 @@
                 <label for="charity">Choose the charity you want to support</label>
                 <select id="charity" required>
                     <option value="dummy">--Select Charity--</option>
-                    <option value="second">--Select Charity--</option>
+                    <option value="test">Test Charity</option>
                 </select>
             </div>
         </form>
