signin/up fixes

--- a/src/html/signin.html
+++ b/src/html/signin.html
@@ -16,7 +16,7 @@
     <div class="form">
         <input type="email" id="email" name="email" placeholder="Email">
         <input type="password" id="password" name="password" placeholder="Password">
-        <button type="submit" id="submit"> Sign Up </button>
+        <button type="submit" id="submit"> Sign In </button>
     </div>
 
     <!--Sign In Authentication/Firebase-->
