donation object add to database

--- a/src/html/donatepage.html
+++ b/src/html/donatepage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/donatepage.css">
-    <script src="../scripts/donatepage.js" defer></script>
+    <script type="module" src="../scripts/donatepage.js" defer></script>
     <title>Document</title>
 </head>
 
@@ -17,7 +17,7 @@
         <form id="signup-form">
             <div>
                 <label for="images">Upload Images</label>
-                <input type="file" id="images" multiple> 
+                <input type="file" id="images" multiple>
             </div>
             <div>
                 <label for="desc">Enter Desc</label>
@@ -35,7 +35,7 @@
                 </select>
             </div>
         </form>
-            <button id="submit" type="submit" form="signup-form">Submit</button>
+        <button id="submit" type="submit" form="signup-form">Submit</button>
     </div>
 </body>
 
