index.html bgimg and donationpage fix

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <img class="bg-img" src="../assets/indexbg.jpg" alt="background-image">
+    <img class="bg-img" src="./assets/indexbg.jpg" alt="background-image">
     <div class="account-links">
         <a class="login-link" href="html/signup.html">SIGN UP</a>
         <a class="login-link" href="html/signin.html">SIGN IN</a>
