--- a/src/html/buypage.html
+++ b/src/html/buypage.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/buypage.css">
+    <script src="../scripts/buypage.html" defer></script>
     <title>Document</title>
 </head>
-<body>
 
+<body>
+    <div class="upper-content">
+        <h1>Buy and Donate</h1>
+        <input id="search" type="text">
+        <button id="searchButton">Search Button</button>
+    </div>
+    <div id="items-container">
+        <!-- propogate with items via js -->
+    </div>
 </body>
+
 </html>
