--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
         <h1 id="header">Charity in Style</h1>
         <p id="subheader">Create change while changing your clothes</p>
         <div class="main-buttons">
-            <a href="html/buypage.html">Buy</a>
-            <a href="html/donatepage.html">Donate</a>
+            <a href="./html/buypage.html">Buy</a>
+            <a href="./html/donatepage.html">Donate</a>
         </div>
     </div>
 </body>
