--- a/src/html/buypage.html
+++ b/src/html/buypage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/buypage.css">
-    <script src="../scripts/buypage.html" defer></script>
+    <script type="module" src="../scripts/buypage.js" defer></script>
     <title>Document</title>
 </head>
 
@@ -14,7 +14,7 @@
     <div class="upper-content">
         <h1>Buy and Donate</h1>
         <input id="search" type="text">
-        <button id="searchButton">Search Button</button>
+        <button id="searchButton">Search</button>
     </div>
     <div id="items-container">
         <!-- propogate with items via js -->
