--- a/src/html/donatepage.html
+++ b/src/html/donatepage.html
@@ -12,23 +12,23 @@
 
 <body>
     <img src="../assets/menu.svg" alt="backbutton" class="backbutton">
-    <h1>Donate your clothes for a good cause</h1>
     <div class="main-content">
+        <h1>Upload Your Donation</h1>
         <form id="signup-form">
             <div>
                 <label for="images">Upload Images</label>
                 <input type="file" id="images" multiple>
             </div>
             <div>
-                <label for="desc">Enter Desc</label>
+                <label for="desc">Enter Description</label>
                 <textarea id="desc" rows="2" required></textarea>
             </div>
             <div>
-                <label for="tags">Enter single word search tags</label>
+                <label for="tags">Enter Single Word Tags w/ a Space In Between</label>
                 <textarea id="tags" rows="2" required></textarea>
             </div>
             <div>
-                <label for="charity">Choose the charity you want to support</label>
+                <label for="charity">Select a Charity</label>
                 <select id="charity" required>
                     <option value="dummy">--Select Charity--</option>
                     <option value="test">Test Charity</option>
