--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,14 @@
     </div>
     <div class="main-content">
         <h1 id="header">Charity in Style</h1>
-        <p id="subheader">Create change while changing your clothes</p>
+        <p id="subheader">Create change with a change of your clothes</p>
         <div class="main-buttons">
-            <a href="./html/buypage.html">Buy</a>
-            <a href="./html/donatepage.html">Donate</a>
+            <a href="./html/buypage.html">
+                <p> Buy </p>
+            </a>
+            <a href="./html/donatepage.html">
+                <p> Donate </p>
+            </a>
         </div>
     </div>
 </body>
