item dynamic page

--- a/src/html/item.html
+++ b/src/html/item.html
@@ -12,7 +12,7 @@
     <h1>Hello World</h1>
     <div id="content">
         <button id="backButton"><=</button>
-        <button id="forwardButton">=></button>
+        <button id="frontButton">=></button>
         <!-- propogate with info -->
     </div> 
 </body>
