--- a/src/html/donatepage.html
+++ b/src/html/donatepage.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <img src="../assets/menu.svg" alt="backbutton" class="backbutton">
+    <div id="preview">
+
+    </div>
     <div class="main-content">
         <h1>Upload Your Donation</h1>
         <form id="signup-form">
