--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <script defer src="app.js"></script>
     <title>Document</title>
@@ -12,12 +15,13 @@
 
 <body>
     <img class="bg-img" src="./assets/indexbg.jpg" alt="background-image">
+    <a class="logo" href="index.html"> Charitee </a>
     <div class="account-links">
-        <a class="login-link" href="html/signup.html">SIGN UP</a>
-        <a class="login-link" href="html/signin.html">SIGN IN</a>
+        <a class="signup" href="html/signup.html">SIGN UP</a>
+        <a class="signin" href="html/signin.html">SIGN IN</a>
     </div>
     <div class="main-content">
-        <h1 id="header">Charity in Style</h1>
+        <h1 id="header">Stylish Charity</h1>
         <p id="subheader">Create change with a change of your clothes</p>
         <div class="main-buttons">
             <a href="./html/buypage.html">
