--- a/src/html/item.html
+++ b/src/html/item.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Buy this item</h1>
+    <h1 id="title">Buy this item</h1>
     <div id="content">
         <button id="backButton"><=</button>
         <button id="frontButton">=></button>
