--- a/src/html/donatepage.html
+++ b/src/html/donatepage.html
@@ -22,12 +22,20 @@
                 <input type="file" id="images" multiple>
             </div>
             <div>
+                <label for="title">Enter Title</label>
+                <input type="text" id="title" required>
+            </div>
+            <div>
                 <label for="desc">Enter Description</label>
                 <textarea id="desc" rows="2" required></textarea>
             </div>
             <div>
                 <label for="tags">Enter Single Word Tags w/ a Space In Between</label>
                 <textarea id="tags" rows="2" required></textarea>
+            </div>
+            <div>
+                <label for="price">Set Price</label>
+                <input type="number" id="price" required>
             </div>
             <div>
                 <label for="charity">Select a Charity</label>
