fixed cookie and hide sign in buttons on login

--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
-    <script defer src="app.js"></script>
+    <link rel="stylesheet" href="./css/index.css">
+    <script defer src="./scripts/app.js"></script>
     <title>Document</title>
 </head>
 
 <body>
     <img class="bg-img" src="./assets/indexbg.jpg" alt="background-image">
     <a class="logo" href="index.html"> Charitee </a>
-    <div class="account-links">
-        <a class="signup" href="html/signup.html">SIGN UP</a>
-        <a class="signin" href="html/signin.html">SIGN IN</a>
+    <div id="account-links">
+        <a class="signin" id="signin" href="html/signin.html">SIGN IN</a>
+        <a class="signup" id="signup" href="html/signup.html">SIGN UP</a>
     </div>
     <div class="main-content">
         <h1 id="header">Stylish Charity</h1>
