--- a/src/html/buypage.html
+++ b/src/html/buypage.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Poppins&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/buypage.css">
     <script type="module" src="../scripts/buypage.js" defer></script>
     <title>Document</title>
@@ -12,11 +16,14 @@
 
 <body>
     <div class="upper-content">
-        <h1>Buy and Donate</h1>
+        <div class="buyimage">
+            <img src="../assets/img4.jpg" />
+        </div>
+        <h1>Find Your Fit</h1>
         <form id="searchForm">
             <input id="search" type="text" placeholder="Search Tags...">
+            <button id="searchButton" type="submit" form="searchForm">Search</button>
         </form>
-        <button id="searchButton" type="submit" form="searchForm">Search</button>
     </div>
     <div id="items-container">
         <!-- propogate with items via js -->
