--- a/src/html/buypage.html
+++ b/src/html/buypage.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Poppins&family=Shrikhand&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed:wght@500&family=Shrikhand&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/buypage.css">
     <script type="module" src="../scripts/buypage.js" defer></script>
