--- a/src/html/item.html
+++ b/src/html/item.html
@@ -15,5 +15,6 @@
         <button id="frontButton">=></button>
         <!-- propogate with info -->
     </div> 
+    <button id="buy">Notify Seller</button>
 </body>
 </html>
