--- a/src/html/item.html
+++ b/src/html/item.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="../scripts/item.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed:wght@500&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/item.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1 id="title">Buy this item</h1>
     <div id="content">
-        <button id="backButton"><=</button>
-        <button id="frontButton">=></button>
-        <!-- propogate with info -->
-    </div> 
+        <button id="backButton">
+            <=< /button>
+                <button id="frontButton">=></button>
+                <!-- propogate with info -->
+    </div>
 </body>
+
 </html>
