small item change

--- a/src/html/item.html
+++ b/src/html/item.html
@@ -16,7 +16,7 @@
 
 <body>
     <h1 id="title">Buy this item</h1>
-    <div id="content">
+    <div id="ontent">
         <button id="backButton">
             <=< /button>
                 <button id="frontButton">=></button>
