--- a/src/html/item.html
+++ b/src/html/item.html
@@ -17,8 +17,7 @@
 <body>
     <h1 id="title">Buy this item</h1>
     <div id="content">
-        <button id="backButton">
-            <=< /button>
+        <button id="backButton"><=</button>
                 <button id="frontButton">=></button>
                 <!-- propogate with info -->
     </div>
